[gd_scene load_steps=2 format=3 uid="uid://bhud01"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_script"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="EnemyHPLabel" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EnemyHPLabel"]
layout_mode = 2
text = "敌人血量"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/EnemyHPLabel"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="PlayerHPLabel" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PlayerHPLabel"]
layout_mode = 2
text = "玩家血量"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/PlayerHPLabel"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="ResultPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0

[node name="VBoxContainer" type="VBoxContainer" parent="ResultPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ResultLabel" type="Label" parent="ResultPanel/VBoxContainer"]
layout_mode = 2
text = "胜利！"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="ResultPanel/VBoxContainer"]
layout_mode = 2
text = "重新开始"

[node name="ExitButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
text = "退出游戏"
